--- a/index.html
+++ b/index.html
@@ -656,10 +656,27 @@
         }
 
         .contact-info {
-            max-width: 1200px;
+            max-width: 400px;
             margin: 0 auto;
             font-size: 1.1em;
-            text-align: center;
+            text-align: left;
+        }
+
+        .contact-info p {
+            margin: 6px 0;
+        }
+
+        .contact-link {
+            display: inline-flex;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 10px;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .contact-link:hover {
+            text-decoration: none;
         }
 
         .contact-info a {
@@ -673,36 +690,89 @@
             text-shadow: 0 0 8px #ffffff;
         }
 
-        .social-links {
-            margin-top: 20px;
-            display: flex;
+        .contact-icon {
+            display: inline-flex;
+            align-items: center;
             justify-content: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            color: #ffffff;
+            margin-right: 8px;
+            box-shadow: 0 0 8px rgba(0,0,0,0.2);
+            transition: transform 0.2s, box-shadow 0.2s;
+            font-size: 1.2em;
+        }
+
+        .contact-icon:hover {
+            transform: scale(1.08);
+            box-shadow: 0 0 12px rgba(0,0,0,0.3);
+        }
+
+        .contact-icon.address {
+            background: linear-gradient(135deg, #34a853, #0f9d58);
+        }
+
+        .contact-icon.phone {
+            background: linear-gradient(135deg, #0f9d58, #34a853);
+        }
+
+        .contact-icon.email {
+            background: #ffffff;
+            border: 1px solid rgba(0,0,0,0.08);
+        }
+
+        .contact-icon.email img {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
+        }
+
+        .social-links {
+            margin-top: 6px;
+            display: flex;
+            justify-content: flex-start;
             gap: 15px;
         }
 
         .social-link {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #00966e, #ffffff);
-            color: #333;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: #0d6efd; /* bright web blue */
+            color: #ffffff;
             border: 2px solid #ffffff;
             text-decoration: none;
             box-shadow: 0 0 8px rgba(0,0,0,0.2);
+            font-size: 1.15em;
             transition: transform 0.2s, box-shadow 0.2s, background 0.3s;
         }
 
         .social-link:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
             box-shadow: 0 0 12px rgba(0,0,0,0.3);
-            background: linear-gradient(135deg, #ffffff, #00966e);
+            background: #0b5ed7; /* slightly darker on hover */
         }
 
         .social-link i {
-            font-size: 1.2em;
+            font-size: 1.1em;
+            color: #ffffff;
+        }
+
+        .social-text {
+            align-self: center;
+            font-size: 0.95em;
+            font-weight: 600;
+            color: #006b51;
+            text-decoration: none;
+        }
+
+        .social-text:hover {
+            color: #333;
+            text-decoration: none;
         }
 
         .working-hours-table {
@@ -1366,13 +1436,35 @@
     <section id="contact" class="contact">
         <h2>Контакти</h2>
         <div class="contact-info">
-            <p><strong >Адрес:</strong> ул. "Цар Иван Александър" 5, Ямбол</p>
-            <p><strong class="123">Телефон:</strong> <a href="tel:0878101524">087 810 1524</a></p>
-            <p><strong>Имейл:</strong> <a href="mailto:key1yambol@gmail.com">key1yambol@gmail.com</a></p>
+            <p>
+                <a class="contact-link" href="https://www.google.com/maps?q=%D1%83%D0%BB.+%D0%A6%D0%B0%D1%80+%D0%98%D0%B2%D0%B0%D0%BD+%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%8A%D1%80+5,+%D0%AF%D0%BC%D0%B1%D0%BE%D0%BB" target="_blank" rel="noopener noreferrer">
+                    <span class="contact-icon address">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </span>
+                    <span>ул. "Цар Иван Александър" 5, Ямбол</span>
+                </a>
+            </p>
+            <p>
+                <a class="contact-link" href="tel:0878101524">
+                    <span class="contact-icon phone">
+                        <i class="fas fa-phone"></i>
+                    </span>
+                    <span>087 810 1524</span>
+                </a>
+            </p>
+            <p>
+                <a class="contact-link" href="mailto:key1yambol@gmail.com">
+                    <span class="contact-icon email">
+                        <img src="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/gmail.ico" alt="Gmail">
+                    </span>
+                    <span>key1yambol@gmail.com</span>
+                </a>
+            </p>
             <div class="social-links">
                 <a class="social-link" href="https://www.facebook.com/p/NadiKey-61565386973024/" target="_blank" rel="noopener noreferrer" aria-label="Facebook страница на NadiKey">
                     <i class="fab fa-facebook-f"></i>
                 </a>
+                <a class="social-text" href="https://www.facebook.com/p/NadiKey-61565386973024/" target="_blank" rel="noopener noreferrer">Facebook страница</a>
             </div>
             <table class="working-hours-table">
                 <tr>
